Bug 566188 - MSAA nsAccessibleWrap::GetXPAccessibleFor should return nsAccessible*, r=davidb, f=marcoz