accessible/src/msaa/nsDocAccessibleWrap.cpp
@@ -92,23 +92,17 @@ STDMETHODIMP nsDocAccessibleWrap::QueryInterface(REFIID iid, void** ppv)
   return S_OK;
 }
 
-void
-nsDocAccessibleWrap::GetXPAccessibleFor(const VARIANT& aVarChild,
-                                        nsIAccessible **aXPAccessible)
+nsAccessible*
+nsDocAccessibleWrap::GetXPAccessibleFor(const VARIANT& aVarChild)
 {
-  *aXPAccessible = nsnull;
-
-  if (IsDefunct())
-    return;
-
   // If lVal negative then it is treated as child ID and we should look for
   // accessible through whole accessible subtree including subdocuments.
   // Otherwise we treat lVal as index in parent.
 
   if (aVarChild.lVal < 0)
-    GetXPAccessibleForChildID(aVarChild, aXPAccessible);
-  else
-    nsDocAccessible::GetXPAccessibleFor(aVarChild, aXPAccessible);
+    return IsDefunct() ? nsnull : GetXPAccessibleForChildID(aVarChild);
+
+  return nsAccessibleWrap::GetXPAccessibleFor(aVarChild);
 }
 
 STDMETHODIMP
@@ -123,8 +117,7 @@ __try {
     // It is used by AccessibleObjectFromEvent() called by AT when AT handles
     // our MSAA event.
 
-    nsCOMPtr<nsIAccessible> xpAccessible;
-    GetXPAccessibleForChildID(varChild, getter_AddRefs(xpAccessible));
+    nsAccessible *xpAccessible = GetXPAccessibleForChildID(varChild);
     if (!xpAccessible)
       return E_FAIL;
 
@@ -277,7 +270,7 @@ STDMETHODIMP nsDocAccessibleWrap::get_accValue(
 
 struct nsSearchAccessibleInCacheArg
 {
-  nsRefPtr<nsAccessNode> mAccessNode;
+  nsRefPtr<nsAccessible> mAccessible;
   void *mUniqueID;
 };
 
@@ -294,7 +287,7 @@ SearchAccessibleInCache(const void* aKey, nsDocAccessible* aDocAccessible,
     nsAccessNode* accessNode =
       aDocAccessible->GetCachedAccessNode(arg->mUniqueID);
     if (accessNode) {
-      arg->mAccessNode = accessNode;
+      arg->mAccessible = do_QueryObject(accessNode);
       return PL_DHASH_STOP;
     }
   }
@@ -302,12 +295,9 @@ SearchAccessibleInCache(const void* aKey, nsDocAccessible* aDocAccessible,
   return PL_DHASH_NEXT;
 }
 
-void
-nsDocAccessibleWrap::GetXPAccessibleForChildID(const VARIANT& aVarChild,
-                                               nsIAccessible  **aAccessible)
+nsAccessible*
+nsDocAccessibleWrap::GetXPAccessibleForChildID(const VARIANT& aVarChild)
 {
-  *aAccessible = nsnull;
-
   NS_PRECONDITION(aVarChild.vt == VT_I4 && aVarChild.lVal < 0,
                   "Variant doesn't point to child ID!");
 
@@ -319,6 +309,6 @@ nsDocAccessibleWrap::GetXPAccessibleForChildID(const VARIANT& aVarChild,
 
   gGlobalDocAccessibleCache.EnumerateRead(SearchAccessibleInCache,
                                           static_cast<void*>(&arg));
-  if (arg.mAccessNode)
-    CallQueryInterface(arg.mAccessNode.get(), aAccessible);
+
+  return arg.mAccessible;
 }
